--- a/conferma.html
+++ b/conferma.html
@@ -22,13 +22,16 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div class="container">
         <h1>Store talentform</h1>
-         <form action = "buyPc" method = "post">
+         <form action = "confPc" method = "post">
          <div th:each="computer : ${lista}" class = "card">
-         <h3>Articolo:  <span th:text="${computer.modello}"></h3>
-          <h3>Pezzi:  <span th:text="${computer.qnt}"></h3>
+         <h3>Articolo:  <input th:value="${computer.modello}" th:name="modello" readonly></input>
+          <h3>Pezzi:  <input th:value="${computer.qnt}" th:name="qnt" readonly></input>
      
       </div>
-      <h3>Il prezzo totale da pagare è <span th:text="${prezzo}"> euro</h3>
+      <h3>Il prezzo totale da pagare è <input th:value="${prezzo}" th:name="prezzo" readonly> euro</input>
+      <hr>
+      Inserisci la tua mail per completare l'ordine
+      <input type="text" name="email">
        <input type="submit" value = "conferma">
        
     </form>
